--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bud",
+  "name": "bud-backend",
   "version": "0.1.0",
   "description": "Example backend server for Bud",
   "main": "index.js",
   "bin": {
-    "bud.js": "./bin/bud.js"
+    "bud-backend": "./bin/bud.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
