--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "~3.4.5",
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "asn1.js": "~0.1.2",
+    "asn1.js-rfc2560": "~0.1.0"
   }
 }
